--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,10 @@
       "type": "git",
       "url": "https://github.com/yusam-hub/app-ext.git"
     },
+    "yusam-hub/project-0001-client-auth-sdk": {
+      "type": "git",
+      "url": "https://github.com/yusam-hub/project-0001-client-auth-sdk.git"
+    },
     "yusam-hub/project-0001-client-demo-sdk": {
       "type": "git",
       "url": "https://github.com/yusam-hub/project-0001-client-demo-sdk.git"
@@ -87,6 +91,8 @@
     "yusam-hub/model-ext": "dev-master",
     "yusam-hub/app-ext": "dev-master",
 
+    "firebase/php-jwt": "^6.0",
+    "yusam-hub/project-0001-client-auth-sdk": "dev-master",
     "yusam-hub/project-0001-client-demo-sdk": "dev-master"
   },
   "require-dev": {
