--- a/env/.env.local.dev
+++ b/env/.env.local.dev
@@ -27,3 +27,5 @@ WS_CLIENT_BIND_ADDRESS=127.0.0.1
 WS_CLIENT_BIND_PORT=9100
 WS_CLIENT_BIND_PULL_ADDRESS=127.0.0.1
 WS_CLIENT_BIND_PULL_PORT=9101
+
+AUTHORIZE_ADMIN_SERVICE_KEY=testing
