--- a/env/.env.vbox.dev
+++ b/env/.env.vbox.dev
@@ -30,3 +30,5 @@ WS_CLIENT_BIND_PULL_PORT=9101
 
 CLIENT_AUTH_APP_SDK_APP_ID=""
 CLIENT_AUTH_APP_SDK_APP_PRIVATE_KEY=""
+
+AUTHORIZE_ADMIN_SERVICE_KEY=testing
