--- a/env/.env.local.dev
+++ b/env/.env.local.dev
@@ -29,3 +29,8 @@ WS_CLIENT_BIND_PULL_ADDRESS=127.0.0.1
 WS_CLIENT_BIND_PULL_PORT=9101
 
 AUTHORIZE_ADMIN_SERVICE_KEY=testing
+
+CLIENT_S3_SDK_BUCKET_NAME=
+CLIENT_S3_SDK_ENDPOINT=
+CLIENT_S3_SDK_KEY=
+CLIENT_S3_SDK_SECRET=
