--- a/env/.env.vbox.dev
+++ b/env/.env.vbox.dev
@@ -32,3 +32,8 @@ CLIENT_AUTH_APP_SDK_APP_ID=""
 CLIENT_AUTH_APP_SDK_APP_PRIVATE_KEY=""
 
 AUTHORIZE_ADMIN_SERVICE_KEY=testing
+
+CLIENT_S3_SDK_BUCKET_NAME=
+CLIENT_S3_SDK_ENDPOINT=
+CLIENT_S3_SDK_KEY=
+CLIENT_S3_SDK_SECRET=
