--- a/env/.env.vbox.dev
+++ b/env/.env.vbox.dev
@@ -28,6 +28,7 @@ WS_CLIENT_BIND_PORT=9100
 WS_CLIENT_BIND_PULL_ADDRESS=127.0.0.1
 WS_CLIENT_BIND_PULL_PORT=9101
 
+CLIENT_AUTH_APP_SDK_BASE_URL=
 CLIENT_AUTH_APP_SDK_APP_ID=""
 CLIENT_AUTH_APP_SDK_APP_PRIVATE_KEY=""
 
